--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,8 @@
   "extends": [
     "eslint:recommended",
     "plugin:react/recommended",
-    "plugin:@typescript-eslint/eslint-recommended"
+    "plugin:@typescript-eslint/eslint-recommended",
+    "plugin:@typescript-eslint/recommended"
   ],
   "globals": {
     "Atomics": "readonly",
@@ -22,12 +23,37 @@
   },
   "plugins": [
     "react",
-    "@typescript-eslint"
+    "@typescript-eslint",
+    "import"
   ],
   "rules": {
+    "@typescript-eslint/explicit-function-return-type": ["error", { "allowExpressions": true }],
+    "array-bracket-spacing": ["error", "never"],
+    "arrow-spacing": "error",
+    "brace-style": ["error", "1tbs"],
+    "comma-dangle": ["error", "never"],
+    "comma-spacing": ["error", { "before": false, "after": true }],
+    "comma-style": [ "error", "last"],
+    "dot-location": ["error", "property"],
+    "eol-last": ["error", "always"],
+    "func-style": ["error", "declaration", { "allowArrowFunctions": true }],
+    "import/newline-after-import": ["error", { "count": 2 }],
     "indent": ["error", 2],
-    "quotes": ["error", "single"],
     "jsx-quotes": ["error", "prefer-double"],
-    "semi": ["error", "always"]
+    "keyword-spacing": "error",
+    "lines-between-class-members": ["error", "always"],
+    "max-len": ["error", { "code": 120, "ignoreComments": true }],
+    "newline-after-var": "error",
+    "newline-before-return": "error",
+    "newline-per-chained-call": ["error", { "ignoreChainWithDepth": 2 }],
+    "no-trailing-spaces": "error",
+    "object-curly-spacing": ["error", "always"],
+    "quotes": ["error", "single"],
+    "react/prop-types": 0,
+    "semi": ["error", "always"], 
+    "space-before-blocks": "error",
+    "space-before-function-paren": ["error", { "named": "never" }],
+    "space-in-parens": ["error", "never"],    
+    "space-infix-ops": ["error"]        
   }
 }
