--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "@types/node": "^12.12.67",
     "@types/react": "^16.9.51",
     "@types/react-dom": "^16.9.8",
+    "i18next": "^20.3.2",
+    "i18next-browser-languagedetector": "^6.1.2",
     "react": "^16.13.1",
     "react-countdown": "^2.3.2",
     "react-dom": "^16.13.1",
+    "react-i18next": "^11.11.1",
     "react-scripts": "3.4.3",
     "react-three-fiber": "^5.0.3",
     "three": "^0.125.0",
